# PyIR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_numpy.py
pyir/: __init__.py  __main__.py  _engine.py  ad.py  core.py  cuda.py  fusion.py  helpers.py  inspect.py  numpy.py  policy.py  simd.py  typing.py
pyir/backend/: cuda.py  simd.py
pyir/core/: __init__.py  aot.py  cache.py  consts.py  function.py  ir.py  jit.py  optims.py  registry.py
pyir/debug/: inspect.py
pyir/fusion/: __init__.py  async.py  autovec.py  complex.py  core.py  ergonomic.py  ir_utils.py  vectorized.py
pyir/grad/: __init__.py  ad.py  forward.py  higher_order.py  shape.py
pyir/interop/: numpy.py
pyir/security/: __init__.py  policy.py  safe_mode.py  sandbox.py
tests/: test_autofusion.py  test_core.py  test_cuda.py  test_fusion.py
